--- a/package.json
+++ b/package.json
@@ -2,14 +2,37 @@
   "name": "swerve",
   "version": "0.1.0",
   "private": true,
+  "main": "server/",
+  "proxy": "http://localhost:4006",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.5",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.0",
-    "web-vitals": "^0.2.4"
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.11",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@stripe/stripe-js": "^1.9.0",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.20.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "hash-router": "^0.4.0",
+    "massive": "^6.6.0",
+    "node-sass": "^4.14.1",
+    "nodemailer": "^6.4.13",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-elastic-carousel": "^0.9.1",
+    "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
+    "react-scroll-up-button": "^1.6.4",
+    "redux": "^4.0.5",
+    "redux-promise-middleware": "^6.1.2",
+    "scrollreveal": "^4.0.7",
+    "stripe": "^8.112.0"
   },
   "scripts": {
     "start": "react-scripts start",
