--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.20.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "google-maps-react": "^2.0.6",
     "hash-router": "^0.4.0",
     "massive": "^6.6.0",
     "node-sass": "^4.14.1",
